GKE/Python/kubernetes/00-namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ml-app
  labels:
    name: ml-app
